--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <h2>All Thinks Are Possible If You believe</h2>
                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                         alteration in some form, by injected humour, or randomised words</p>
-                    <button class="btn">Contuct Us</button>
+                    <button class="btn"><a href="https://wa.me/8801302900590">Contact Us</a></button>
                 </div>
             </div>
         </section>
