--- a/index.html
+++ b/index.html
@@ -36,12 +36,10 @@
 
     <section id="failures">
         <div class="failures-container">
-            <div class="img">
-                <div>
-                    <img src="images/person.png" alt="">
-                </div>
-                <div class="backround"></div>
+            <div class="failures-img">
+                <img src="images/icons/porosh.jpg" alt="">
             </div>
+            <div class="backround"></div>
             <div class="failures-heading">
                 <h3>My failures of previous year</h3>
                 <p class="fh-p">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
@@ -103,7 +101,8 @@
             <div class="footer-container">
                 <div class="footer-info">
                     <h2 class="footer-title">Future</h2>
-                    <p class="footer-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                    <p class="footer-text">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised words</p>
                     <p class="contact-email">Email : poroshhasan786@gmail.com</p>
                     <p class="contact-phone">Phone : 013 0290 0590</p>
                     <div class="icon-img">
